--- a/website/package.json
+++ b/website/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "openssl": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
