--- a/website/package.json
+++ b/website/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@prisma/client": "^5.12.1",
+    "@vercel/blob": "^0.22.3",
     "bcrypt": "^5.1.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "openssl": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
