--- a/website/.env
+++ b/website/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:sakasakasaka3@localhost:5432/ufanetdocdata"
+DATABASE_URL="postgres://default:YrwVcqdFM75y@ep-curly-dawn-a4vibp8q.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 NEXTAUTH_SECRET='4g0Omf18A6zRyv2ASYj/3iVRvKvbIvf7GtJp9JQP1sU='
 NEXTAUTH_URL = "http://localhost:3000"
