--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "openssl": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "uuid": "^9.0.1"
   },
